@@ -1,3 +1,8 @@
+Fri Oct 15 13:39:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tutorials/Shapes/Tutorial/03_executors.html:
+          Also referring to the generated executor header files.
+
 Fri Oct 15 13:21:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
